sumo/tests/sumo/errors/meandata_edges_missing_end_divider/errors.sumo.exe
Error: While processing option 'dump-ends':
 Empty element occured in 1019;
